# proofrelay

./: .dockerignore  .gitignore  Dockerfile  GENBLAZE_FEEDBACK.md  README.md  SUBMISSION_DRAFT.md  pyproject.toml  render.yaml
.github/workflows/: test.yml
examples/: incident.json
src/proofrelay/: __init__.py  cli.py  compositor.py  live_pipeline.py  models.py  pipeline.py  webapp.py
src/proofrelay/web/: app.js  index.html  styles.css
tests/: test_pipeline.py
